@@ -1,3 +1,7 @@
+* Buttons can optionally have the frame removed using the setHasFrame() method or the hasFrame argument to the constructor. Additionally they no longer have minimum sizes defined by the stylesheet.
+
+* Minor style changes.
+
 0.20.0
 ------
 
